# vencord-installer-gui

./: .gitignore  LICENSE  README.md  example.env  index.html  package-lock.json  package.json
.github/workflows/: release.yml
aur/: PKGBUILD
scripts/: Release Template.md  version_bump.py
src/: App.css  App.tsx  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_utils.rs  config.rs  dependencies.json  dependencies.rs  discord.rs  lib.rs  logging.rs  main.rs  options.rs  provided_repositories.json  provided_themes.json  run_log.rs
src-tauri/src/flows/: backup.rs  discord_clients.rs  mod.rs  pipeline.rs  repo.rs  themes.rs
src/components/: DependencyPanel.tsx  Dock.tsx  TopNav.tsx  UpdateModal.tsx  UpdaterPanel.tsx
src/css/: BackupsPage.css  Dock.css  HomePage.css  InstallPage.css  TopNav.css  layout.css  tokens.css
src/pages/: BackupsPage.tsx  DevTestsPage.tsx  HomePage.tsx  InstallPage.tsx  LogsPage.tsx  SettingsPage.tsx
updater-test/: .gitignore  README_LOCAL_TEST.md  latest.json  server.py  tauri.local.conf.json
