[package]
name = "vig"
version = "0.1.0"
description = "A GUI application to install vencord with custom user plugins"
authors = ["EvilNick2"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2.0.0-rc"
dirs = "6.0.0"
once_cell = "1.21.3"
sysinfo = "0.36.1"
libc = "0.2.177"
