[package]
name = "vig"
version = "1.2.3"
description = "A GUI application to install vencord with custom user plugins"
authors = ["EvilNick2"]
license = "MIT"
repository = "https://github.com/EvilNick2/vencord-installer-gui"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-log = "2.7.1"
dirs = "6.0.0"
once_cell = "1.21.3"
sysinfo = "0.36.1"
libc = "0.2.177"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.6.0"
dunce = "1.0.5"
tauri-plugin-opener = "2.5.3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"
